<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:ems="12"
        android:text='Create a new account!'
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:background="@drawable/edit_text_background"
        android:padding="8dp"
        android:hint="Username"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:background="@drawable/edit_text_background"
        android:padding="8dp"
        android:hint="First Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:background="@drawable/edit_text_background"
        android:padding="8dp"
        android:hint="Last Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:background="@drawable/edit_text_background"
        android:padding="8dp"
        android:hint="Enter your email address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:background="@drawable/edit_text_background"
        android:hint="Enter a password"
        android:padding="8dp"
        android:inputType="textPassword"
        android:maxLength="20" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:text="Create Account"
        android:background="@color/moodiDarkBlue"
        android:textColor="@color/moodiWhite"
        android:layout_gravity="end" />


</LinearLayout>